--- a/.github/workflows/build-k3s.yaml
+++ b/.github/workflows/build-k3s.yaml
@@ -150,8 +150,8 @@ jobs:
       run: |
         mv ./build/out/data-linux.tar.zst ./dist/artifacts/data-linux${{ env.ARCH_EXT }}.tar.zst
 
-    - name: "Upload K3s Artifacts"
-      uses: actions/upload-artifact@v4
-      with:
-        name: k3s${{ env.ARCH_EXT }}
-        path: dist/artifacts/
+    # - name: "Upload K3s Artifacts"
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: k3s${{ env.ARCH_EXT }}
+    #     path: dist/artifacts/
